[metadata]
name = opendp-pytorch
version = 0.0.0-development
url = https://opendp.org
project_urls =
    Source = https://github.com/opendp/opendp-pytorch
    Issues = https://github.com/opendp/opendp-pytorch/issues
    Documentation = https://docs.opendp.org/
author = The OpenDP Project
author_email = info@opendp.org
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = ./LICENSE
description = Python bindings for the OpenDP Library
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    differential privacy

[options]
zip_safe = false
python_requires = >=3.6
packages = find:
package_dir =
    = src
install_requires =
    opendp
    torch

[options.packages.find]
where = src

[options.package_data]
opendp = lib/*

[tool:pytest]
testpaths =
    test
